--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -8,8 +8,7 @@
 @media screen and (max-width: 550px) {
     .form {
         width: auto;
-        padding: 0 16px;
-        
+        padding: 0 16px;        
     }
 }
 
@@ -36,6 +35,13 @@
     }
 }
 
+@media screen and (max-height: 640px) {
+    .form__title {        
+        font-size: 30px;
+        line-height: 34px;       
+    }
+}
+
 
 .form__form {   
     margin: 40px 0 0;     
@@ -47,27 +53,40 @@
 }
 
 @media screen and (max-width: 768px) {
-.form__form {
-    height: 76px;
-    margin-top: 24px;
+    .form__form {
+        height: 76px;
+        margin-top: 24px;
 }
 }
+
+@media screen and (max-height: 640px) {
+    .form__form {       
+        margin-top: 20px;
+    }
+}
+
 
 @media screen and (max-width: 490px) {
     .form__form {
         flex-direction: column;  
-        height: auto;    
-        margin-top: 42px;
+        height: auto;       
         max-width: 288px;
         align-self: center;
     }
 }
 
+@media screen and (max-height: 375px) {
+    .form__form {        
+        margin-top: 24px;      
+    }
+}
+
 .form__input {
     width: 100%;
-    height: 64px;
+    height: 64px;   
     margin: 0;
-    padding: 0 0 0 24px;
+    padding: 20px 0 18px 24px;
+    vertical-align: top;
     border-radius: 100px;
     outline: none;
     border: 1px solid #d1d2d6;    
@@ -75,16 +94,17 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;
-    color: #1a1b22;
+    color: #1a1b22;   
+    box-sizing: border-box;    
 }
 
 .form__input::placeholder {
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;    
-    color: #b6bcbf;
-   
+    color: #b6bcbf;    
 } 
+
 
 .form__input:active {
     color: #1a1b22;
@@ -98,9 +118,10 @@
 }
 
 @media screen and (max-width: 768px) {
-    .form__input {       
-        box-sizing: border-box;
-        height: 56px;
+    .form__input {  
+        padding-top: 16px;    
+        padding-bottom: 14px;
+        height: 56px;        
     }    
 }
 
@@ -108,8 +129,7 @@
     .form__input {       
         padding-left: 16px;
         order: 2;
-    }       
-   
+    }   
 }
 
 .form__button {
